--- a/netlify.toml
+++ b/netlify.toml
@@ -6,5 +6,5 @@
     Access-Control-Allow-Headers = "*"
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/api/:splat"
+  to = "/.netlify/functions/api"
   status = 200
