--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [[headers]]
-  for = "/api/*"
+  for = "/*"
     [headers.values]
-    Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Methods = "*"
-    Access-Control-Allow-Headers = "*"
+    Access-Control-Allow-Origin: '*',
+    Access-Control-Allow-Headers: 'Content-Type',
+    Access-Control-Allow-Methods: 'GET, POST, PUT, DELETE'
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/api"
