--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,7 @@
 [[headers]]
   for = "/*"
     [headers.values]
-    Access-Control-Allow-Origin: '*',
-    Access-Control-Allow-Headers: 'Content-Type',
-    Access-Control-Allow-Methods: 'GET, POST, PUT, DELETE'
+      Access-Control-Allow-Origin = "*"
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/api"
